@@ -7,7 +7,7 @@
  * @subpackage Maintenance
  */
 
-require_once('commandLine.inc');
+require_once(dirname(__FILE__).'/../commandLine.inc');
 
 if ( isset( $args[0] ) ) {
 	$code = $args[0];
