@@ -7,7 +7,7 @@
  * Also need to rewrite the wfMsg system / message-cache.
  */
 
-include('commandLine.inc');
+include(dirname(__FILE__).'/../commandLine.inc');
 
 
 ?>
